# thesis-project-be

./: .env.example  .env.production  .gitignore  LINT_SETUP.md  MODELS_DEPLOYMENT.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  SETUP_MODELS.md  check_database.py  check_db.py  check_latest.py  check_models_list.py  check_output.txt  check_railway_db.py  check_session.py  check_simple.py  check_supabase.py  debug_save.py  download_models.py  env.production.example  latest_session.txt  manage.py  pyproject.toml  quick_check.py  requirements.txt  schema_columns.txt  session_encryption.key  session_output.txt  simple_check.py  start.sh  test_allowed_hosts.py  test_consent.py  test_save.py  test_security.py  upload_large.py  upload_models.py  verify_schema_presence.py
api/: api.py  apps.py  auth.py  cache_service.py  constants.py  encryption.py  exceptions.py  gemini_service.py  ml_service.py  models.py  openai_service.py  pdf_endpoints.py  pdf_schemas.py  pdf_service.py  rate_limiter.py  schemas.py  security_utils.py  session_manager.py  workflow_api.py  workflow_schemas.py
api/migrations/: 0001_initial.py  0002_patientrecord_blood_group_and_more.py
api/utils/: __init__.py  image_processing.py
config/: settings.py  urls.py
migrations/: supa_02_add_encrypted.sql  supa_03_add_analysis_cols.sql  supa_04_fix_id.sql  supa_05_fix_created_at.sql
storage/: __init__.py  interface.py  local_storage.py  supabase_storage.py
tests/: conftest.py  test_exceptions.py  test_image_processing.py  test_smoke.py  test_workflow_api.py
